<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F6CD04"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/vbanner"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/add_donor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/eName"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_donor_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/eGroup"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_donor_blood_group"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/eNumber"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/eLocation"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_location"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/addbtn"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:text="@string/add_donor"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancelbtn"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textStyle="bold" />
</LinearLayout>