<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#B6F308"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/BgDonor_Scren"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/search_bloodgroup_donor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Seach_b_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/seach_by_blood_g"
         />

    <Button

        android:id="@+id/btn_search_b"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btn_can"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/list_of_Bgroup"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_b_list"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>