<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_byname"
    android:layout_width="match_parent"
    android:background="#B6F308"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/search_donor_by_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Seach_b_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/search_by_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/find" />

    <Button
        android:id="@+id/btn_Cancel"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/back_home" />

    <TextView
        android:id="@+id/list_ofname"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>