<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".detail_frag">


    <ImageView
        android:id="@+id/img_p"
        android:layout_width="121dp"
        android:layout_height="163dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/person" />

    <LinearLayout
        android:layout_width="189dp"
        android:layout_height="124dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dtxt_Name"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/d_dname" />

        <TextView
            android:id="@+id/dtxt_Bgroup"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/string_bgroup" />

        <TextView
            android:id="@+id/dtxt_Phone"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/d_dphn" />

        <TextView
            android:id="@+id/dtxt_Loc"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/string_loc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="137dp"
        android:layout_height="163dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_phon"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/call_id"
            app:srcCompat="@drawable/phon" />

        <ImageView
            android:id="@+id/img_loc"
            android:layout_width="47dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/loc_id"
            app:srcCompat="@drawable/loc" />
    </LinearLayout>
</LinearLayout>